# SolarSystemC-

./: .gitignore  CMakeLists.txt  README.md  celestialbody.cpp  celestialbody.h  fragmentshader.frag  fragmentshader.fsh  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  planet.cpp  planet.h  resources.qrc  satellite.cpp  satellite.h  sun.cpp  sun.h  vertexshader.vsh
shaders/: vertexshader.vert
